Restarting EQS system

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=1914,Y=999)
+LastSize=(X=0,Y=0)
 LastExecutedLaunchDevice=Windows@DESKTOP-D8R35MC
 LastExecutedLaunchName=DESKTOP-D8R35MC
 LastExecutedPIEPreviewDevice=
@@ -534,11 +534,11 @@ BehaviorTreeGraphNode="\"Object\" "
 AIGraphNode="\"Object\" "
 BTT_ZigZagMoveTo_C="\"Object\" "
 BTTask_BlueprintBase="\"Object\" "
-BTTaskNode="\"Object\" "
-BTNode="\"Object\" "
+BTTaskNode="\"Object\" \"Object.EQS.EQSRequest\" "
+BTNode="\"Object\" \"Object.EQS.EQSRequest\" "
 BTT_FocusTarget_C="\"Object\" "
 BTTask_MoveTo="\"Object\" "
-BTTask_BlackboardBase="\"Object\" "
+BTTask_BlackboardBase="\"Object\" \"Object.EQS.EQSRequest\" "
 BlackboardData="\"Object\" \"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" \"Object.Blackboard.Keys.Keys[1].KeyType\" \"Object.Blackboard.Keys.Keys[3].KeyType\" \"Object.Blackboard.Keys.Keys[4].KeyType\" "
 BTT_FocusTargetDecoy_C="\"Object\" "
 BTDecorator_Blackboard="\"Object\" "
@@ -662,22 +662,18 @@ EQSTestingPawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=Environment Query
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=Environment Query
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=EnumEditor
-RecentAssetEditors=EnumEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Behavior Tree
-RecentAssetEditors=
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=EnumEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -693,14 +689,9 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/GrappleHookSystem/BP_GrapplehookTarget.BP_GrapplehookTarget
 OpenAssetsAtExit=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade.SK_Blade_BlackWyrmBlade
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AI/BT_EnemyBase.BT_EnemyBase
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AI/EQS/EQS_Strafe_Ranged.EQS_Strafe_Ranged
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AI/EQS/EQS_Context_AttackTargetsRange.EQS_Context_AttackTargetsRange
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AI/BB_EnemyBase.BB_EnemyBase
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AI/EQS/EQS_Strafe_Melee.EQS_Strafe_Melee
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AI/EQS/EQS_Context_AttackTargetsMelee.EQS_Context_AttackTargetsMelee
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1888,36 +1879,32 @@ MRUItem7=/Game/SoStylized/Maps/CompleteVol2/Overview
 MRUItem8=/Game/ThirdPerson/Maps/LVL_00_SubLVLs/LVL_00_SL_01
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/AI/EQS/EQS_Context_AttackTargetsMelee
-MRUItem1=/Game/ThirdPerson/Blueprints/AI/EQS/EQS_Strafe_Melee
-MRUItem2=/Game/ThirdPerson/Blueprints/AI/Tasks/BTT_FocusTarget
-MRUItem3=/Game/ThirdPerson/Blueprints/AI/EQS/EQS_Context_AttackTargetsRange
-MRUItem4=/Game/ThirdPerson/Blueprints/AI/EQS/EQS_Strafe_Ranged
+MRUItem0=/Game/ThirdPerson/Blueprints/AI/BT_EnemyBase
+MRUItem1=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade
+MRUItem2=/Game/GrappleHookSystem/BP_GrapplehookTarget
+MRUItem3=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem4=/Game/ThirdPerson/Blueprints/AI/Tasks/BTT_FocusTarget
 MRUItem5=/Game/ThirdPerson/Blueprints/AI/3Hard/BP_ConeBasicEnemy_Hard
 MRUItem6=/Game/ThirdPerson/Blueprints/AI/EN_AIState
 MRUItem7=/Game/ThirdPerson/Blueprints/AI/EN_EnemyType
 MRUItem8=/Game/ThirdPerson/Blueprints/AI/BP_EnemyHealthDataAsset
 MRUItem9=/Game/ThirdPerson/Blueprints/AI/BP_ConeEnemy
-MRUItem10=/Game/ThirdPerson/Blueprints/AI/BT_EnemyBase
-MRUItem11=/Game/ThirdPerson/Maps/LVL_00
-MRUItem12=/Game/ThirdPerson/Input/IMC_Default
-MRUItem13=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade
-MRUItem14=/Game/GrappleHookSystem/BP_GrapplehookTarget
-MRUItem15=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
-MRUItem16=/Game/ThirdPerson/Blueprints/Abilities/BP_PlayerWaterball
-MRUItem17=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractFiringRatePickUp
-MRUItem18=/Game/ThirdPerson/WBP/GameUI/MeleeTimer
-MRUItem19=/Game/ThirdPerson/WBP/GameUI/GrappleTimer
-MRUItem20=/Game/ThirdPerson/WBP/GameUI/InGameScreen
-MRUItem21=/Game/ThirdPerson/WBP/GameUI/Stamina
-MRUItem22=/Game/ThirdPerson/WBP/GameUI/DashTimer
-MRUItem23=/Game/GrappleHookSystem/WBP_GrapplehookTarget
-MRUItem24=/Game/ThirdPerson/Niagara/NS_AfterImage
-MRUItem25=/Game/ThirdPerson/Blueprints/Abilities/BP_OttoWaterball
-MRUItem26=/Game/ThirdPerson/Blueprints/Abilities/BP_Ottomatic
-MRUItem27=/Game/ThirdPerson/Blueprints/AI/Tasks/BTT_FocusTargetDecoy
-MRUItem28=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractProjectileDamageIncrease
-MRUItem29=/Game/ThirdPerson/Blueprints/Abilities/BP_InkCloud
+MRUItem10=/Game/ThirdPerson/Maps/LVL_00
+MRUItem11=/Game/ThirdPerson/Input/IMC_Default
+MRUItem12=/Game/ThirdPerson/Blueprints/Abilities/BP_PlayerWaterball
+MRUItem13=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractFiringRatePickUp
+MRUItem14=/Game/ThirdPerson/WBP/GameUI/MeleeTimer
+MRUItem15=/Game/ThirdPerson/WBP/GameUI/GrappleTimer
+MRUItem16=/Game/ThirdPerson/WBP/GameUI/InGameScreen
+MRUItem17=/Game/ThirdPerson/WBP/GameUI/Stamina
+MRUItem18=/Game/ThirdPerson/WBP/GameUI/DashTimer
+MRUItem19=/Game/GrappleHookSystem/WBP_GrapplehookTarget
+MRUItem20=/Game/ThirdPerson/Niagara/NS_AfterImage
+MRUItem21=/Game/ThirdPerson/Blueprints/Abilities/BP_OttoWaterball
+MRUItem22=/Game/ThirdPerson/Blueprints/Abilities/BP_Ottomatic
+MRUItem23=/Game/ThirdPerson/Blueprints/AI/Tasks/BTT_FocusTargetDecoy
+MRUItem24=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractProjectileDamageIncrease
+MRUItem25=/Game/ThirdPerson/Blueprints/Abilities/BP_InkCloud
 
 [DetailCategories]
 InputMappingContext.Mappings=True
@@ -6621,8 +6608,8 @@ BP_ShootingConeEnemy_Weak_C.Networking=True
 /Game/ThirdPerson/Blueprints/AI/Tasks/BTT_FocusTarget.BTT_FocusTarget=0
 /Game/ThirdPerson/Blueprints/AI/Tasks/BTT_ZigZagMoveTo.BTT_ZigZagMoveTo=1
 /Game/ThirdPerson/Blueprints/AI/Allies/BP_PetDecoy.BP_PetDecoy=0
-/Game/ThirdPerson/Blueprints/AI/BB_EnemyBase.BB_EnemyBase=1
-/Game/ThirdPerson/Blueprints/AI/BT_EnemyBase.BT_EnemyBase=1
+/Game/ThirdPerson/Blueprints/AI/BB_EnemyBase.BB_EnemyBase=0
+/Game/ThirdPerson/Blueprints/AI/BT_EnemyBase.BT_EnemyBase=0
 /Game/ThirdPerson/Blueprints/AI/OldAI/BP_WanderCreature.BP_WanderCreature=0
 /Game/ThirdPerson/Blueprints/AI/Tasks/BTT_FocusTargetDecoy.BTT_FocusTargetDecoy=0
 /Game/ThirdPerson/Blueprints/AI/Tasks/BTT_MoveToDecoy.BTT_MoveToDecoy=0
