Got them to attack the strafe
Will try to add more distance onto their circle now

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -660,6 +660,7 @@ BP_EQS_TestingPawn_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"
 EQSTestingPawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 EnvironmentQueryGraphNode_Root="\"Object\" "
 EnvironmentQueryGraphNode="\"Object\" "
+BTDecorator_Cooldown="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -6531,6 +6532,9 @@ EnvQueryTest_Pathfinding.Score=True
 EnvQueryTest_Pathfinding.Preview=True
 BP_ShootingConeEnemy_Weak_C.Networking=True
 EnvironmentQueryGraphNode_Root.Debug=True
+BTDecorator_Cooldown.FlowControl=True
+BTDecorator_Cooldown.Decorator=True
+BTDecorator_Cooldown.Description=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Input/IMC_Default.IMC_Default=0
@@ -6620,8 +6624,8 @@ EnvironmentQueryGraphNode_Root.Debug=True
 /Game/ThirdPerson/Blueprints/AI/Tasks/BTT_FocusTarget.BTT_FocusTarget=0
 /Game/ThirdPerson/Blueprints/AI/Tasks/BTT_ZigZagMoveTo.BTT_ZigZagMoveTo=1
 /Game/ThirdPerson/Blueprints/AI/Allies/BP_PetDecoy.BP_PetDecoy=0
-/Game/ThirdPerson/Blueprints/AI/BB_EnemyBase.BB_EnemyBase=0
-/Game/ThirdPerson/Blueprints/AI/BT_EnemyBase.BT_EnemyBase=0
+/Game/ThirdPerson/Blueprints/AI/BB_EnemyBase.BB_EnemyBase=1
+/Game/ThirdPerson/Blueprints/AI/BT_EnemyBase.BT_EnemyBase=1
 /Game/ThirdPerson/Blueprints/AI/OldAI/BP_WanderCreature.BP_WanderCreature=0
 /Game/ThirdPerson/Blueprints/AI/Tasks/BTT_FocusTargetDecoy.BTT_FocusTargetDecoy=0
 /Game/ThirdPerson/Blueprints/AI/Tasks/BTT_MoveToDecoy.BTT_MoveToDecoy=0
