Updated the logic on level up away from eventtick onto a timer

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -241,7 +241,7 @@ LastLevel=/Game/ThirdPerson/Maps/LVL_00
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[16]\" \"Object.Mappings.Mappings.Mappings[17]\" \"Object.Mappings.Mappings.Mappings[18]\" \"Object.Mappings.Mappings.Mappings[19]\" \"Object.Mappings.Mappings.Mappings[20]\" \"Object.Mappings.Mappings.Mappings[21]\" \"Object.Mappings.Mappings.Mappings[22]\" \"Object.Mappings.Mappings.Mappings[23]\" \"Object.Mappings.Mappings.Mappings[24]\" \"Object.Mappings.Mappings.Mappings[25]\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 InputAction="\"Object\" "
@@ -712,9 +712,7 @@ RecentAssetEditors=Niagara
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade.SK_Blade_BlackWyrmBlade
 OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/WBP_EXPAmount.WBP_EXPAmount
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Pawn/BP_EXPComponent.BP_EXPComponent
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AI/Allies/Spirits/BP_RunaWaySpirit.BP_RunaWaySpirit
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
 OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/WBP_WaveModeHUD.WBP_WaveModeHUD
 
 [SlateAdditionalLayoutConfig]
