--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -241,7 +241,7 @@ LastLevel=/Game/ThirdPerson/Maps/LVL_00
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Velocity.Velocity\" \"Object.PlanarMovement.PlaneConstraintOrigin\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[16]\" \"Object.Mappings.Mappings.Mappings[17]\" \"Object.Mappings.Mappings.Mappings[18]\" \"Object.Mappings.Mappings.Mappings[19]\" \"Object.Mappings.Mappings.Mappings[20]\" \"Object.Mappings.Mappings.Mappings[21]\" \"Object.Mappings.Mappings.Mappings[22]\" \"Object.Mappings.Mappings.Mappings[23]\" \"Object.Mappings.Mappings.Mappings[24]\" \"Object.Mappings.Mappings.Mappings[25]\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 InputAction="\"Object\" "
@@ -250,7 +250,7 @@ SkinnedMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
-ActorComponent="\"Object\" "
+ActorComponent="\"Object\" \"Object.Velocity.Velocity\" \"Object.PlanarMovement.PlaneConstraintOrigin\" "
 K2Node_InputAction="\"Object\" "
 K2Node="\"Object\" "
 EdGraphNode="\"Object\" \"Object.Comment.CommentColor\" "
@@ -715,13 +715,10 @@ OpenAssetsAtExit=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrm
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AI/Allies/Spirits/BP_RunaWaySpirit.BP_RunaWaySpirit
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractFiringRatePickUp.BP_InteractFiringRatePickUp
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AI/WavePoolData.WavePoolData
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AI/BP_ShootingConeEnemy.BP_ShootingConeEnemy
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AI/BP_SlowConeShootingEnemy.BP_SlowConeShootingEnemy
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Abilities/EnemyAbilities/BP_EnemyProjectile_Medium.BP_EnemyProjectile_Medium
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Abilities/EnemyAbilities/BP_EnemyProjectile.BP_EnemyProjectile
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Abilities/EnemyAbilities/BP_EnemyProjectile_Hard.BP_EnemyProjectile_Hard
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Abilities/EnemyAbilities/BP_EnemyProjectile_Insane.BP_EnemyProjectile_Insane
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Pawn/BP_HealthComponent.BP_HealthComponent
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
