Basic Setup for build settings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=Oceana
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/ThirdPerson/Maps/LVL_00.LVL_00
-GameDefaultMap=/Game/ThirdPerson/Maps/LVL_00.LVL_00
+GameDefaultMap=/Game/ThirdPerson/WBP/MainMenuUI/Maps/LVL_MainMenu.LVL_MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
