--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -166,7 +166,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentPosGridSize=0
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/WBP/GameUI/Tutorial
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Oceana
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -238,12 +238,12 @@ AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/WBP/MainMenuUI/Maps/LVL_MainMenu
+LastLevel=/Game/ThirdPerson/Maps/LVL_00
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[16]\" \"Object.Mappings.Mappings.Mappings[17]\" \"Object.Mappings.Mappings.Mappings[18]\" \"Object.Mappings.Mappings.Mappings[19]\" \"Object.Mappings.Mappings.Mappings[20]\" \"Object.Mappings.Mappings.Mappings[21]\" \"Object.Mappings.Mappings.Mappings[22]\" \"Object.Mappings.Mappings.Mappings[23]\" \"Object.Mappings.Mappings.Mappings[24]\" \"Object.Mappings.Mappings.Mappings[25]\" "
 DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 InputAction="\"Object\" "
@@ -720,7 +720,6 @@ WBP_Tutorial_03_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Lay
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -729,6 +728,7 @@ RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
 RecentAssetEditors=Niagara
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=Niagara
@@ -753,11 +753,8 @@ OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter.BP_Th
 OpenAssetsAtExit=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade.SK_Blade_BlackWyrmBlade
 OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/WBP_PauseMenu.WBP_PauseMenu
 OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial.WBP_Tutorial
-OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_01.WBP_Tutorial_01
-OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_02.WBP_Tutorial_02
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode
 OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/InGameScreen.InGameScreen
-OpenAssetsAtExit=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_03.WBP_Tutorial_03
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1948,15 +1945,15 @@ MRUItem8=/Game/ThirdPerson/Maps/LVL_00_SubLVLs/LVL_00_SL_01
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_03
-MRUItem1=/Game/ThirdPerson/WBP/MainMenuUI/Maps/LVL_MainMenu
-MRUItem2=/Game/ThirdPerson/WBP/GameUI/InGameScreen
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem4=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_02
-MRUItem5=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_01
-MRUItem6=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial
-MRUItem7=/Game/ThirdPerson/WBP/GameUI/WBP_PauseMenu
-MRUItem8=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade
-MRUItem9=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem1=/Game/ThirdPerson/WBP/GameUI/InGameScreen
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem3=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_02
+MRUItem4=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial_01
+MRUItem5=/Game/ThirdPerson/WBP/GameUI/Tutorial/WBP_Tutorial
+MRUItem6=/Game/ThirdPerson/WBP/GameUI/WBP_PauseMenu
+MRUItem7=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade
+MRUItem8=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem9=/Game/ThirdPerson/WBP/MainMenuUI/Maps/LVL_MainMenu
 MRUItem10=/Game/ThirdPerson/Niagara/NS_BlackHoleEyeFX_01
 MRUItem11=/Game/ThirdPerson/Blueprints/Abilities/AbilityPickUps/BP_InteractOttoPickUp
 MRUItem12=/Game/ThirdPerson/Niagara/NS_Tentacles
@@ -8114,6 +8111,7 @@ WBP_Tutorial_03_C.Localization=True
 WBP_Tutorial_03_C.Accessibility=True
 WBP_Tutorial_03_C.Rendering=True
 WBP_Tutorial_03_C.Navigation=True
+FbxImportUI.Animation=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Input/IMC_Default.IMC_Default=0
