Changed Oceana Idle pose

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -167,6 +167,8 @@ CurrentPosGridSize=0
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Oceana
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Oceana/Animations/Oceana
+None=======
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -717,6 +719,19 @@ WBP_Tutorial_01_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Lay
 WBP_Tutorial_03_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 IKRetargeter="\"Object\" "
 RetargetChainSettings="\"Object\" "
+None=======
+ABP_Oceana_C="\"Object\" "
+AnimGraphNode_BlendSpacePlayer="\"Object\" "
+AnimGraphNode_BlendSpaceBase="\"Object\" "
+AnimGraphNode_AssetPlayerBase="\"Object\" "
+AnimationStateGraph="\"Object\" "
+AnimGraphNode_ControlRig="\"Object\" "
+AnimGraphNode_CustomProperty="\"Object\" "
+CR_Mannequin_BasicFootIK_C="\"Object\" "
+ControlRig="\"Object\" "
+RigVMHost="\"Object\" "
+AnimPreviewInstance="\"Object\" "
+AnimSingleNodeInstance="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
@@ -724,37 +739,39 @@ DebuggerAttached=False
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=IKRetargetEditor
 RecentAssetEditors=IKRetargetEditor
+RecentAssetEditors=ControlRigEditor
+RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
-RecentAssetEditors=SkeletonEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+RecentAssetEditors=
+None=======
+None=======
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade.SK_Blade_BlackWyrmBlade
-OpenAssetsAtExit=/Game/ThirdPerson/Oceana/Animations/Oceana/Run_Fwd.Run_Fwd
-OpenAssetsAtExit=/Game/Characters/Mannequin_UE4/Animations/Run_Fwd.Run_Fwd
+OpenAssetsAtExit=/Game/ThirdPerson/Oceana/Animations/Oceana/Locomotion_BS1D.Locomotion_BS1D
+OpenAssetsAtExit=/Game/Characters/Mannequin_UE4/Animations/NuetralIdle_Fwd.NuetralIdle_Fwd
+OpenAssetsAtExit=/Game/Characters/Mannequins/Animations/ABP_Manny.ABP_Manny
+OpenAssetsAtExit=/Game/ThirdPerson/Oceana/ABP/ABP_Oceana.ABP_Oceana
 OpenAssetsAtExit=/Game/ThirdPerson/Oceana/RTG_Mannequin_Marmaid_Rig.RTG_Mannequin_Marmaid_Rig
 OpenAssetsAtExit=/Game/ThirdPerson/Oceana/RTG_Marmaid_Rig_Mannequin.RTG_Marmaid_Rig_Mannequin
 
@@ -1952,36 +1969,34 @@ MRUItem7=/Game/SoStylized/Maps/CompleteVol2/Overview
 MRUItem8=/Game/ThirdPerson/Maps/LVL_00_SubLVLs/LVL_00_SL_01
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Oceana/Animations/Oceana/Run_Fwd
-MRUItem1=/Game/ThirdPerson/Oceana/Animations/Oceana/Walk_Fwd_02
-MRUItem2=/Game/ThirdPerson/Oceana/Animations/Oceana/Walk_Fwd_01
-MRUItem3=/Game/ThirdPerson/Oceana/Animations/Oceana/Walk_Fwd1
-MRUItem4=/Game/Characters/Mannequin_UE4/Animations/Run_Fwd
-MRUItem5=/Game/Characters/Mannequin_UE4/Animations/Walk_Fwd_02
-MRUItem6=/Game/Characters/Mannequin_UE4/Animations/Walk_Fwd_01
-MRUItem7=/Game/ThirdPerson/Oceana/Animations/Oceana/Walk_Fwd
-MRUItem8=/Game/ThirdPerson/Oceana/Animations/Oceana/WalkInCircles_Fwd
-MRUItem9=/Game/ThirdPerson/Oceana/Animations/Oceana/Punch_Fwd
-MRUItem10=/Game/ThirdPerson/Oceana/Animations/Oceana/Kick_Fwd
-MRUItem11=/Game/ThirdPerson/Oceana/Animations/Oceana/Falling_Fwd
-MRUItem12=/Game/ThirdPerson/Oceana/Animations/Oceana/Death_Fwd
-MRUItem13=/Game/Characters/Mannequin_UE4/Animations/Death_Fwd
-MRUItem14=/Game/Characters/Mannequin_UE4/Animations/Falling_Fwd
-MRUItem15=/Game/Characters/Mannequin_UE4/Animations/Jump_Fwd
-MRUItem16=/Game/Characters/Mannequin_UE4/Animations/Kick_Fwd
-MRUItem17=/Game/Characters/Mannequin_UE4/Animations/Punch_Fwd
-MRUItem18=/Game/Characters/Mannequin_UE4/Animations/WalkInCircles_Fwd
-MRUItem19=/Game/Characters/Mannequin_UE4/Animations/Jog_Fwd
-MRUItem20=/Game/ThirdPerson/Oceana/Animations/Oceana/Jog_Fwd
-MRUItem21=/Game/Characters/Mannequin_UE4/Animations/Walk_Fwd
-MRUItem22=/Game/ThirdPerson/Oceana/RTG_Marmaid_Rig_Mannequin
-MRUItem23=/Game/ThirdPerson/Oceana/RTG_Mannequin_Marmaid_Rig
-MRUItem24=/Game/Characters/Mannequin_UE4/Animations/Walking_UE4_UE
-MRUItem25=/Game/ThirdPerson/Oceana/Animations/Man/Walking_UE
-MRUItem26=/Game/ThirdPerson/Oceana/Marmaid_Rig
-MRUItem27=/Game/ThirdPerson/Oceana/Marmaid_Rig_Skeleton
-MRUItem28=/Game/ThirdPerson/WBP/GameUI/InGameScreen
-MRUItem29=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem0=/Game/ThirdPerson/Oceana/Animations/Oceana/Locomotion_BS1D
+MRUItem1=/Game/ThirdPerson/Oceana/Animations/Oceana/NuetralIdle_Fwd
+MRUItem2=/Game/Characters/Mannequin_UE4/Animations/NuetralIdle_Fwd
+MRUItem3=/Game/ThirdPerson/Oceana/ABP/ABP_Oceana
+MRUItem4=/Game/ThirdPerson/Oceana/RTG_Marmaid_Rig_Mannequin
+MRUItem5=/Game/ThirdPerson/Oceana/RTG_Mannequin_Marmaid_Rig
+MRUItem6=/Game/Characters/Mannequins/Rigs/CR_Mannequin_BasicFootIK
+MRUItem7=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem8=/Game/Characters/Mannequin_UE4/Animations/Run_Fwd
+MRUItem9=/Game/ThirdPerson/Oceana/Animations/Oceana/Run_Fwd
+MRUItem10=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade
+MRUItem11=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem12=/Game/ThirdPerson/Oceana/Animations/Oceana/Walk_Fwd_02
+MRUItem13=/Game/ThirdPerson/Oceana/Animations/Oceana/Walk_Fwd_01
+MRUItem14=/Game/ThirdPerson/Oceana/Animations/Oceana/Walk_Fwd1
+MRUItem15=/Game/Characters/Mannequin_UE4/Animations/Walk_Fwd_02
+MRUItem16=/Game/Characters/Mannequin_UE4/Animations/Walk_Fwd_01
+MRUItem17=/Game/ThirdPerson/Oceana/Animations/Oceana/Walk_Fwd
+MRUItem18=/Game/ThirdPerson/Oceana/Animations/Oceana/WalkInCircles_Fwd
+MRUItem19=/Game/ThirdPerson/Oceana/Animations/Oceana/Punch_Fwd
+MRUItem20=/Game/ThirdPerson/Oceana/Animations/Oceana/Kick_Fwd
+MRUItem21=/Game/ThirdPerson/Oceana/Animations/Oceana/Falling_Fwd
+MRUItem22=/Game/ThirdPerson/Oceana/Animations/Oceana/Death_Fwd
+MRUItem23=/Game/Characters/Mannequin_UE4/Animations/Death_Fwd
+MRUItem24=/Game/Characters/Mannequin_UE4/Animations/Falling_Fwd
+MRUItem25=/Game/Characters/Mannequin_UE4/Animations/Jump_Fwd
+MRUItem26=/Game/Characters/Mannequin_UE4/Animations/Kick_Fwd
+MRUItem27=/Game/Characters/Mannequin_UE4/Animations/Punch_Fwd
 
 [DetailCategories]
 InputMappingContext.Mappings=True
@@ -8127,6 +8142,30 @@ IKRetargeter.DebugSettings=True
 RetargetChainSettings.Chain Settings=True
 AssetViewerSettings.Settings=True
 PersonaPreviewSceneDescription.Animation=True
+None=======
+ABP_Oceana_C.RootMotion=True
+ABP_Oceana_C.Notifies=True
+ABP_Oceana_C.Montage=True
+AnimGraphNode_BlendSpacePlayer.Sync=True
+AnimGraphNode_BlendSpacePlayer.Relevancy=True
+AnimGraphNode_BlendSpacePlayer.Functions=True
+AnimGraphNode_BlendSpacePlayer.Coordinates=True
+AnimGraphNode_BlendSpacePlayer.Tag=True
+AnimGraphNode_BlendSpacePlayer.Settings=True
+AnimGraphNode_Base.Functions=True
+AnimGraphNode_Base.Tag=True
+ABP_Oceana_C.Default=True
+AnimationStateGraph.GraphBlending=True
+AnimGraphNode_ControlRig.Settings=True
+AnimGraphNode_ControlRig.Input=True
+AnimGraphNode_ControlRig.Functions=True
+AnimGraphNode_ControlRig.Output=True
+AnimGraphNode_ControlRig.Tag=True
+AnimGraphNode_ControlRig.ControlRig=True
+AnimGraphNode_ControlRig.Performance=True
+AnimPreviewInstance.RootMotion=True
+AnimPreviewInstance.Notifies=True
+AnimPreviewInstance.Montage=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Input/IMC_Default.IMC_Default=0
@@ -8419,6 +8458,13 @@ PersonaPreviewSceneDescription.Animation=True
 /Game/ThirdPerson/Oceana/Animations/Oceana/Walk_Fwd_02.Walk_Fwd_02=0
 /Game/ThirdPerson/Oceana/Animations/Oceana/Run_Fwd.Run_Fwd=0
 /Game/Characters/Mannequin_UE4/Animations/Run_Fwd.Run_Fwd=0
+None=======
+/Game/ThirdPerson/Oceana/Animations/Oceana/Idle_Fwd.Idle_Fwd=0
+/Game/Characters/Mannequin_UE4/Animations/Idle_Fwd.Idle_Fwd=0
+/Game/Characters/Mannequins/Rigs/CR_Mannequin_BasicFootIK.CR_Mannequin_BasicFootIK=0
+/Game/ThirdPerson/Oceana/Animations/Oceana/Locomotion_BS1D.Locomotion_BS1D=0
+/Game/ThirdPerson/Oceana/ABP/ABP_Oceana.ABP_Oceana=0
+/Game/Characters/Mannequin_UE4/Animations/NuetralIdle_Fwd.NuetralIdle_Fwd=0
 
 [PluginBrowser]
 InstalledPlugins=MixamoAnimationRetargeting
@@ -8951,7 +8997,7 @@ ShaderPlatformQualitySettings=True
 ToolPresetProjectSettings=True
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=FBXImport
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
@@ -8984,6 +9030,7 @@ AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=
 AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="IKRetargetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="ControlRigEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 CurveEditorSnapInterval=0.010000
 TimelineScrubSnapValue=1000
 TimelineDisplayFormat=Frames
@@ -9033,6 +9080,7 @@ Contexts=(Name="SkeletonEditor",Commands=)
 Contexts=(Name="PhysicsAssetEditor.Viewport0",Commands=)
 Contexts=(Name="PhysicsAssetEditor",Commands=)
 Contexts=(Name="IKRetargetEditor.Viewport0",Commands=)
+Contexts=(Name="None0",Commands=)
 
 [WidgetTemplatesExpanded]
 Audio=False
