Remade blendspace and ABP

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -257,7 +257,7 @@ SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 K2Node_InputAction="\"Object\" "
 K2Node="\"Object\" "
-EdGraphNode="\"Object\" \"Object.Comment.CommentColor\" "
+EdGraphNode="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -737,17 +737,17 @@ AnimSingleNodeInstance="\"Object\" "
 CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=IKRetargetEditor
 RecentAssetEditors=IKRetargetEditor
-RecentAssetEditors=ControlRigEditor
 RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=ControlRigEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -768,12 +768,11 @@ None=======
 None=======
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade.SK_Blade_BlackWyrmBlade
-OpenAssetsAtExit=/Game/ThirdPerson/Oceana/Animations/Oceana/Locomotion_BS1D.Locomotion_BS1D
 OpenAssetsAtExit=/Game/Characters/Mannequin_UE4/Animations/NuetralIdle_Fwd.NuetralIdle_Fwd
 OpenAssetsAtExit=/Game/Characters/Mannequins/Animations/ABP_Manny.ABP_Manny
-OpenAssetsAtExit=/Game/ThirdPerson/Oceana/ABP/ABP_Oceana.ABP_Oceana
 OpenAssetsAtExit=/Game/ThirdPerson/Oceana/RTG_Mannequin_Marmaid_Rig.RTG_Mannequin_Marmaid_Rig
 OpenAssetsAtExit=/Game/ThirdPerson/Oceana/RTG_Marmaid_Rig_Mannequin.RTG_Marmaid_Rig_Mannequin
+OpenAssetsAtExit=/Game/ThirdPerson/Oceana/ABP/ABP_Oceana.ABP_Oceana
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1969,18 +1968,18 @@ MRUItem7=/Game/SoStylized/Maps/CompleteVol2/Overview
 MRUItem8=/Game/ThirdPerson/Maps/LVL_00_SubLVLs/LVL_00_SL_01
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Oceana/Animations/Oceana/Locomotion_BS1D
-MRUItem1=/Game/ThirdPerson/Oceana/Animations/Oceana/NuetralIdle_Fwd
-MRUItem2=/Game/Characters/Mannequin_UE4/Animations/NuetralIdle_Fwd
-MRUItem3=/Game/ThirdPerson/Oceana/ABP/ABP_Oceana
-MRUItem4=/Game/ThirdPerson/Oceana/RTG_Marmaid_Rig_Mannequin
-MRUItem5=/Game/ThirdPerson/Oceana/RTG_Mannequin_Marmaid_Rig
-MRUItem6=/Game/Characters/Mannequins/Rigs/CR_Mannequin_BasicFootIK
-MRUItem7=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem8=/Game/Characters/Mannequin_UE4/Animations/Run_Fwd
-MRUItem9=/Game/ThirdPerson/Oceana/Animations/Oceana/Run_Fwd
-MRUItem10=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade
-MRUItem11=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem0=/Game/ThirdPerson/Oceana/Animations/Oceana/BS_Locomotion
+MRUItem1=/Game/ThirdPerson/Oceana/ABP/ABP_Oceana
+MRUItem2=/Game/ThirdPerson/Oceana/RTG_Marmaid_Rig_Mannequin
+MRUItem3=/Game/ThirdPerson/Oceana/RTG_Mannequin_Marmaid_Rig
+MRUItem4=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem5=/Game/Characters/Mannequin_UE4/Animations/NuetralIdle_Fwd
+MRUItem6=/Game/InfinityBladeWeapons/Weapons/Blade/Swords/Blade_BlackWyrmBlade/SK_Blade_BlackWyrmBlade
+MRUItem7=/Game/ThirdPerson/Blueprints/Pawn/BP_ThirdPersonCharacter
+MRUItem8=/Game/ThirdPerson/Oceana/Animations/Oceana/NuetralIdle_Fwd
+MRUItem9=/Game/Characters/Mannequins/Rigs/CR_Mannequin_BasicFootIK
+MRUItem10=/Game/Characters/Mannequin_UE4/Animations/Run_Fwd
+MRUItem11=/Game/ThirdPerson/Oceana/Animations/Oceana/Run_Fwd
 MRUItem12=/Game/ThirdPerson/Oceana/Animations/Oceana/Walk_Fwd_02
 MRUItem13=/Game/ThirdPerson/Oceana/Animations/Oceana/Walk_Fwd_01
 MRUItem14=/Game/ThirdPerson/Oceana/Animations/Oceana/Walk_Fwd1
@@ -8465,6 +8464,7 @@ None=======
 /Game/ThirdPerson/Oceana/Animations/Oceana/Locomotion_BS1D.Locomotion_BS1D=0
 /Game/ThirdPerson/Oceana/ABP/ABP_Oceana.ABP_Oceana=0
 /Game/Characters/Mannequin_UE4/Animations/NuetralIdle_Fwd.NuetralIdle_Fwd=0
+/Game/ThirdPerson/Oceana/Animations/Oceana/BS_Locomotion.BS_Locomotion=1
 
 [PluginBrowser]
 InstalledPlugins=MixamoAnimationRetargeting
@@ -8847,6 +8847,7 @@ Vector3f=
 NiagaraSystem=WaterBodyOcean.Collision.Collision,WidgetComponent.Materials.MaterialList,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,BP_ConeBasicEnemy_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_Insane_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_Insane_C.TransformCommon.Transform,BP_RunaWaySpirit_C.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.FootStepSFXArray,K2Node_VariableGet.DefaultValueCategory.PlayerHurtSoundArray,K2Node_VariableGet.DefaultValueCategory.PopSFXArray_0,K2Node_VariableGet.DefaultValueCategory.GrappleHitSFXArray,K2Node_VariableGet.DefaultValueCategory.AttackSpellSFXArray,K2Node_VariableGet.DefaultValueCategory.AttackSpellSFXArray_02,K2Node_VariableGet.DefaultValueCategory.SpawnSFXArray,K2Node_VariableGet.DefaultValueCategory.SpiritSFXArray,K2Node_VariableGet.DefaultValueCategory.SpiritPool,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.ZonePool,K2Node_VariableGet.DefaultValueCategory.EnemyPool,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_VariableSet.DefaultValueCategory.EnemyPool,K2Node_VariableSet.DefaultValueCategory.SpiritPool,K2Node_VariableSet.DefaultValueCategory.ZonePool,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,K2Node_FunctionEntry.Inputs.29EB62D145C5A2A6E42E2C878468CB1B,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,PropertyWrapper.DefaultValueCategory.PopSFXArray_0,PropertyWrapper.DefaultValueCategory.EnemyPool,PropertyWrapper.DefaultValueCategory.GrappleHitSFXArray,PropertyWrapper.DefaultValueCategory.AttackSpellSFXArray,PropertyWrapper.DefaultValueCategory.AttackSpellSFXArray_02,PropertyWrapper.DefaultValueCategory.SpawnSFXArray,PropertyWrapper.DefaultValueCategory.ZonePool,PostProcessComponent.PostProcessVolume.Lens,CapsuleComponent.Collision.Collision,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.UseHealthPickUps,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.CursorX_R,InputSettings.Bindings.AxisMappings.CursorY_D,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,GameMapsSettings.DefaultModes.SelectedGameModeDetails
 WBP_Tutorial_C=WaterBodyOcean.Collision.Collision,WidgetComponent.Materials.MaterialList,BP_ThirdPersonCharacter_C.Collision.Collision,BP_ConeEnemy_C.Physics.ConstraintsGroup,BP_ConeEnemy_C.Collision.Collision,BP_ConeBasicEnemy_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_Insane_C.Physics.ConstraintsGroup,BP_ShootingConeEnemy_Insane_C.TransformCommon.Transform,BP_RunaWaySpirit_C.Collision.Collision,BoxComponent.TransformCommon.Transform,BoxComponent.Physics.ConstraintsGroup,BoxComponent.Collision.Collision,SkeletalMeshComponent.Collision.Collision,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.WeightedIndices,K2Node_VariableGet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.FootStepSFXArray,K2Node_VariableGet.DefaultValueCategory.PlayerHurtSoundArray,K2Node_VariableGet.DefaultValueCategory.PopSFXArray_0,K2Node_VariableGet.DefaultValueCategory.GrappleHitSFXArray,K2Node_VariableGet.DefaultValueCategory.AttackSpellSFXArray,K2Node_VariableGet.DefaultValueCategory.AttackSpellSFXArray_02,K2Node_VariableGet.DefaultValueCategory.SpawnSFXArray,K2Node_VariableGet.DefaultValueCategory.SpiritSFXArray,K2Node_VariableGet.DefaultValueCategory.SpiritPool,K2Node_VariableGet.DefaultValueCategory.Mesh,K2Node_VariableGet.DefaultValueCategory.ZonePool,K2Node_VariableGet.DefaultValueCategory.EnemyPool,K2Node_VariableSet.DefaultValueCategory.UpgradeScreensArray,K2Node_VariableSet.DefaultValueCategory.ProjectileUpgradeStruct,K2Node_VariableSet.DefaultValueCategory.EnemyPool,K2Node_VariableSet.DefaultValueCategory.SpiritPool,K2Node_VariableSet.DefaultValueCategory.ZonePool,K2Node_CustomEvent.Inputs.1C11B20F45A6C7019D54588BC1BCEAF6,K2Node_FunctionEntry.Inputs.29EB62D145C5A2A6E42E2C878468CB1B,PropertyWrapper.DefaultValueCategory.UpgradeScreensArray,PropertyWrapper.DefaultValueCategory.ProjectileUpgradeStruct,PropertyWrapper.DefaultValueCategory.PopSFXArray_0,PropertyWrapper.DefaultValueCategory.EnemyPool,PropertyWrapper.DefaultValueCategory.GrappleHitSFXArray,PropertyWrapper.DefaultValueCategory.AttackSpellSFXArray,PropertyWrapper.DefaultValueCategory.AttackSpellSFXArray_02,PropertyWrapper.DefaultValueCategory.SpawnSFXArray,PropertyWrapper.DefaultValueCategory.ZonePool,PostProcessComponent.PostProcessVolume.Lens,CapsuleComponent.Collision.Collision,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.UseHealthPickUps,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.CursorX_R,InputSettings.Bindings.AxisMappings.CursorY_D,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Remote Build Options,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,GameMapsSettings.DefaultModes.SelectedGameModeDetails
 RetargetChainSettings=RetargetChainSettings.Chain Settings.FK,RetargetChainSettings.Chain Settings.IK,RetargetChainSettings.Chain Settings.Speed Planting
+BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -8997,7 +8998,7 @@ ShaderPlatformQualitySettings=True
 ToolPresetProjectSettings=True
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LoadErrors
 
 [/Script/UnrealEd.PersonaOptions]
 bAutoAlignFloorToMesh=True
